force-app/main/default/objects/EmployeeActivity__c/EmployeeActivity__c.object-meta.xml
<CustomObject>
    <description>Stores employee work pattern data used by the Burnout Prevention Agent to assess wellbeing risk.</description>
    <label>Employee Activity</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>