force-app/main/default/objects/EmployeeActivity__c/fields/After_Hours_Emails__c.field-meta.xml
<CustomField>
    <fullName>After_Hours_Emails__c</fullName>
    <description>Number of emails sent outside standard working hours.</description>
    <label>After-Hours Emails</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>