force-app/main/default/objects/EmployeeActivity__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <description>Full name of the employee being tracked.</description>
    <label>Employee Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>