force-app/main/default/objects/EmployeeActivity__c/fields/Missed_Breaks__c.field-meta.xml
<CustomField>
    <fullName>Missed_Breaks__c</fullName>
    <description>Number of scheduled breaks that were skipped.</description>
    <label>Missed Breaks</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>