force-app/main/default/objects/EmployeeActivity__c/fields/Overdue_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Tasks__c</fullName>
    <description>Number of tasks currently past their due date.</description>
    <label>Overdue Tasks</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>