force-app/main/default/objects/EmployeeActivity__c/fields/Weekend_Logins__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Logins__c</fullName>
    <description>Number of weekend logins in the tracking period.</description>
    <label>Weekend Logins</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>