force-app/main/default/objects/EmployeeActivity__c/fields/Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Hours__c</fullName>
    <description>Average number of hours worked per week.</description>
    <label>Weekly Hours</label>
    <precision>5</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>